添加sdk26的代码